Too much. Yeah, I'm dumb.